--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   crypto: ^3.0.3
+  file_picker: ^6.1.1
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
